--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
         <nav class="nav_mobile">
             <ul class="nav_mobile_ul">
                 <li>
-                    <img src="./photos/mulko.png" alt="" class="logo">
+                    <!-- <img src="./photos/mulko.png" alt="" class="logo"> -->
+                    <a href=""><svg class="mulka"><use href="./symbol-defs.svg#icon-mulko"></use></svg></a>
                 </li>
                 <li>
                     <input type="checkbox" id="toggle">
