--- a/index.html
+++ b/index.html
@@ -38,6 +38,19 @@
                 </li>
             </ul>
         </nav>
+        <nav class="navigation-comp">
+            <div class="logo">
+                <a href=""><svg class="mulka"><use href="./symbol-defs.svg#icon-mulko"></use></svg></a>
+            </div>
+            <ul class="navigation-ul-comp">
+                <li><a href="">Головна</a></li>
+                <li class="medias">
+                    <a href=""><svg><use href="./symbol-defs.svg#icon-instagram"></use></svg></a>
+                    <a href=""><svg><use href="./symbol-defs.svg#icon-telegram"></use></svg></a>
+                    <a href=""><svg><use href="./symbol-defs.svg#icon-olx"></use></svg></a>
+                </li>
+            </ul>
+        </nav>
     </header>
 </body>
 </html>
